# lucky-roll

./: Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 96pgm5925v649w65k9np047844ysgspd-source  p08jvcw823dpbc6rf5d65axaf4akzj4f-source
src/: main.rs
