[package]
name = "lucky-roll"
version = "0.1.0"
edition = "2021"
description = "A simple dice roller that keeps spinning until you hit a triple."
authors = ["Takamatsu-Naoki <takamatsu0331@outlook.jp>"]
license = "MIT"
repository = "https://github.com/Takamatsu-Naoki/lucky-roll"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.0"
